Modificacion al proyecto de git y github

--- a/prueba.html
+++ b/prueba.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
- <h1>probando html</h1>
-<p>para practicar con git</p>
+<div class="contenedor">
+    <h1>Aprendiendo git y github</h1>
+</div>
 </body>
 </html>
