Proyecto git y github con cabecera añadida

--- a/prueba.html
+++ b/prueba.html
@@ -11,6 +11,17 @@
 <body>
 <div class="contenedor">
     <h1>Aprendiendo git y github</h1>
+    <header class="site-header inicio">
+        <div class="contenedor contenido-header">
+            <div class="barra">
+            <p>Sobre nosotros</p>
+                <p>Quienes somos</p>
+                <p>Nuestros productos</p>
+                <p>Comentarios</p>
+            </div>
+            <h1>Venta de casas y departamentos exclusivos de lujo</h1>
+        </div> <!--Contenedor-->
+    </header>
 </div>
 </body>
 </html>
