Se agrego imagen de cabecer

--- a/prueba.html
+++ b/prueba.html
@@ -14,6 +14,7 @@
     <header class="site-header inicio">
         <div class="contenedor contenido-header">
             <div class="barra">
+                <img src="img/logo.svg" alt="logotipo de la empresa">
             <p>Sobre nosotros</p>
                 <p>Quienes somos</p>
                 <p>Nuestros productos</p>
