--- a/prueba.html
+++ b/prueba.html
@@ -11,6 +11,7 @@
 <body>
 <div class="contenedor">
     <h1>Aprendiendo git y github</h1>
+    <p>"Neque porro quisquam est qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit..."</p>
     <header class="site-header inicio">
         <div class="contenedor contenido-header">
             <div class="barra">
@@ -28,9 +29,6 @@
 
 
 </div>
-<div class="contenedor">
-    <p>Ut sapien lacus, mollis id massa ut, tristique venenatis magna. Praesent ornare massa id mauris pharetra, non efficitur dolor aliquam. Praesent ultricies metus tortor, a mattis libero aliquam ut. Sed iaculis pulvinar magna sed lacinia. Phasellus congue gravida lacinia. In aliquet aliquam nisl eu commodo. Mauris fermentum metus sit amet molestie tempus. Fusce scelerisque finibus ante, in porttitor leo pretium vel. Proin tincidunt est purus, id porta nisi eleifend in. Phasellus laoreet ligula diam, id pretium neque hendrerit auctor. Sed elementum laoreet erat eu tristique. Sed euismod eget lacus non malesuada. Nulla non elit nibh. Nullam diam nibh, tincidunt nec nunc at, euismod dapibus tortor.</p>
 
-</div>
 </body>
 </html>
