--- a/prueba.html
+++ b/prueba.html
@@ -17,9 +17,17 @@
             <div class="barra">
                 <img src="img/logo.svg" alt="logotipo de la empresa">
             <p>Sobre nosotros</p>
+                <nav>
+                    <a href="/">
                 <p>Quienes somos</p>
+                    </a>
+                    <a href="/">
                 <p>Nuestros productos</p>
+                    </a>
+                    <a href="/">
                 <p>Comentarios</p>
+                    </a>
+                </nav>
             </div>
             <h1>Venta de casas y departamentos exclusivos de lujo</h1>
         </div> <!--Contenedor-->
