Creando enlaces mejores

--- a/prueba.html
+++ b/prueba.html
@@ -19,13 +19,13 @@
 
             <p>Sobre nosotros</p>
                 <nav>
-                    <a href="/">
+                    <a href="#">
                 <p>Quienes somos</p>
                     </a>
-                    <a href="/">
+                    <a href="#">
                 <p>Nuestros productos</p>
                     </a>
-                    <a href="/">
+                    <a href="#">
                 <p>Comentarios</p>
                     </a>
                 </nav>
