--- a/prueba.html
+++ b/prueba.html
@@ -17,19 +17,13 @@
             <div class="barra">
                 <img src="img/logo.svg" alt="logotipo de la empresa">
 
-            <p>Sobre nosotros</p>
-                <nav>
-                    <a href="#">
-                <p>Quienes somos</p>
-                    </a>
-                    <a href="#">
-                <p>Nuestros productos</p>
-                    </a>
-                    <a href="#">
-                <p>Comentarios</p>
-                    </a>
+                <nav class="navegacion">
+                    <a href="#">Nosotros</a>
+                    <a href="#">Anuncios</a>
+                    <a href="#">Blog</a>
+                    <a href="#">Contacto</a>
+                    <a target="_blank" href="http://www.netflix.com">Ir a netflix</a>
                 </nav>
-            </div>
             <h1>Venta de casas y departamentos exclusivos de lujo</h1>
         </div> <!--Contenedor-->
 
