--- a/prueba.html
+++ b/prueba.html
@@ -25,9 +25,8 @@
                     <a target="_blank" href="http://www.netflix.com">Ir a netflix</a>
                 </nav>
                 <h1>Venta de casas y departamentos exclusivos de lujo</h1>
+            </div>
         </div> <!--Contenedor-->
-
-
     </header>
 
 
