Corregido error de cierre de llaveskko

--- a/prueba.html
+++ b/prueba.html
@@ -24,14 +24,13 @@
                     <a href="#">Contacto</a>
                     <a target="_blank" href="http://www.netflix.com">Ir a netflix</a>
                 </nav>
-                <h1>Venta de casas y departamentos exclusivos de lujo</h1>
             </div>
         </div> <!--Contenedor-->
     </header>
 
-
-
 </div>
-
+<main class="contenedor">
+    <h1>Venta de casas y departamentos exclusivos de lujo</h1>
+</main>
 </body>
 </html>
