--- a/prueba.html
+++ b/prueba.html
@@ -32,5 +32,15 @@
 <main class="contenedor">
     <h1>Venta de casas y departamentos exclusivos de lujo</h1>
 </main>
+<footer class="pie">
+    <nav class="navegacion-dos contenedor">
+        <a href="#">Nosotros</a>
+        <a href="#">Anuncios</a>
+        <a href="#">Blog</a>
+        <a href="#">Contacto</a>
+        <a target="_blank" href="http://www.netflix.com">Ir a netflix</a>
+    </nav>
+    <p class="contenedor">Todos los Derechos Reservados 2019 &copy;</p>
+</footer>
 </body>
 </html>
